Adding-Two-Truths-One-Lie

--- a/Two-Truths-One-Lie/index.html
+++ b/Two-Truths-One-Lie/index.html
@@ -16,9 +16,25 @@
   </header>
   <main>
     <!-- how will you mark up your media objects -->
+    <div class="container">
+      <div class="card">
+        <img src="https://images.pexels.com/photos/733872/pexels-photo-733872.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Person 1">
+        <h3>Person 1</h3>
+        <p>I have visited 5 different countries.</p>
+        <p>I can speak 3 different languages.</p>
+        <p>I have bungee jumped from a bridge.</p>
+      </div>
+      <div class="card">
+        <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Person 2">
+        <h3>Person 2</h3>
+        <p>I have ridden in a hot air balloon.</p>
+        <p>I have climbed a mountain.</p>
+        <p>I have skydived from a plane.</p>
+      </div>
+    </div>
   </main>
   <footer>
-    <h3>By YOUR NAMES HERE</h3>
+    <h4>Petar Nikolov</h4>
   </footer>
     </body>
 </html>
